# conectividad_produccion

./: .env  .env.example  .gitignore  DATASETS.yaml  main.py  pyproject.toml  rebuild_db.py  requirements.txt  sedes_mock.geojson
agent/: mock_mcp.py
core/: loader_csv.py  settings.py  utils.py
db/: convert_to_parquet.py  session.py
etl/: loader.py  pipeline.py
routers/: agent.py  data.py
services/: query_engine.py
static/: index.html
